# application_check_update

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  appcu-install.sh  default_config.yaml
.github/workflows/: cd.yml  ci.yml  sh.yml
src/: lib.rs  main.rs
src/local/: config.rs  local_app_info.rs  mod.rs  notification.rs  plist.rs
src/local/config/: mod.rs
src/local/notification/: mod.rs
src/local/plist/: mod.rs
src/request/: mod.rs
src/version_cmp/: mod.rs
tests/: check_test.rs  config_test.rs  local_app_info_test.rs  local_plist_test.rs  request_test.rs  version_cmp_test.rs
tests/test_sources/homebrew_app.app/Contents/: Info.plist
tests/test_sources/ios_app.app/: WrappedBundle
tests/test_sources/ios_app.app/Wrapper/: iTunesMetadata.plist
tests/test_sources/ios_app.app/Wrapper/ios.app/: Info.plist
tests/test_sources/mas_app.app/Contents/: Info.plist
tests/test_sources/sparkle_app.app/Contents/: Info.plist
tests/test_sources/unknown_app.app/: WrappedBundle
tests/test_sources/unknown_app.app/Wrapper/app.app/: Info.plist
