[package]
name = "appcu"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = "1.3.1"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"
lazy_static = "*"
dirs = "*"
threadpool = "1.0"
rss = { git = "https://github.com/ChengLuffy/rss.git" }
skyscraper = "0.4.0"    # XPath for HTML web scraping
clap = { version = "4.1.8", features = ["derive"] }
