[package]
name = "appcu"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = "1.4.2"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
serde_yaml = "0.9.19"
lazy_static = "*"
dirs = "*"
threadpool = "1.8.1"
rss = { git = "https://github.com/ChengLuffy/rss.git" }
skyscraper = "0.4.0"    # XPath for HTML web scraping
clap = { version = "4.1.8", features = ["derive"] }
